LU-5451 lod: improve weird FID handling

In lod_fld_lookup() the FID in question may have come from disk or
wire. Thus if fid_is_sane() fails then return -EIO rather than
asserting. Similarly in lod_object_init() return -EIO if the FID of
the object in question was not allocated by an MDT.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I6c7e3885a8b1aa81fcaa8891392a11e40a02fbce